--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -62,7 +62,7 @@
                 <a class="nav-link text-secondary text-decoration-underline fw-bold active" href="/feed/listings.html">Auctions</a>
               </li>
               <li class="nav-item">
-                <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Login</a>
+                <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Logout</a>
               </li>
             </ul>
           </div>
@@ -78,7 +78,7 @@
         </div>
         <div class="container p-3">
           <h2 class="text-center p-3 fs-1">Auctions</h2>
-          <div class=" justify-content-between align-items-center d-flex flex-column flex-sm-row ">
+          <div class=" justify-content-between align-items-center gap-3 d-flex flex-column flex-sm-row ">
           <form class="col-md-6 border border-secondary border-5 border-top-0 border-end-0 border-start-0">
             <input
               id="searchBar"
@@ -89,14 +89,14 @@
             />
           </form>
             <select class="sortAuctions" name="filter" id="sortAuctions">
-              <option class ="border-secondary rounded" value="">Sort by:</option>
+              <option value="">Sort by:</option>
               <option value="priceHtoL">Price: High - low</option>
               <option value="priceLtoH">Price: Low - High</option>
               <option value="ending">Auction Ending</option>
             </select>
           </div>
         </div>
-        <div class="allAuctions d-flex flex-wrap justify-content-evenly">
+        <div class="allAuctions container d-flex flex-wrap gap-3 justify-content-evenly">
         </div>
             <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
               <div class="spinner-border" role="status"></div>
