--- a/contact.html
+++ b/contact.html
@@ -92,27 +92,26 @@
         </div>
     </main>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
-      <div class="row"></div>
       <div class="row align-items-center">
         <div class="col-md-6">
           <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid justify-content-evenly fs-5 p-3">
-              <ul class="navbar-nav fs-2">
+            <div class="container-fluid justify-content-evenly fs-4 p-3">
+              <ul class="navbar-nav">
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="register.html">Register</a>
+                  <a class="nav-link" href="/register.html">Register</a>
                 </li>
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="about.html">About Us</a>
+                  <a class="nav-link" href="/about.html">About Us</a>
                 </li>
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
               </ul>
             </div>
           </nav>
         </div>
-        <div class="col-md-6">
-          <p class="fs-2 text-center">Get Social With US</p>
+        <div class="col-md-6 mt-3">
+          <p class="fs-4 text-center">Get Social With US</p>
           <div class="d-flex flex-row justify-content-center gap-5">
             <i class="fa-brands fa-facebook fs-1 text-info"></i>
             <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
