--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -91,7 +91,7 @@
           <label for="sortAuctions" class="
           visually-hidden ">Sort Auctions</label>
             <select class="sortAuctions" name="sortAuctions" id="sortAuctions">
-              <option value="">Sort by:</option>
+              <option value="">SORT BY:</option>
               <option value="priceHtoL">Price: High - low</option>
               <option value="priceLtoH">Price: Low - High</option>
               <option value="ending">Auction Ending</option>
@@ -194,12 +194,12 @@
             </div>
         </div>  
       </main>
-    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
+      <footer class="container-fluid bg-success bg-opacity-25 mt-1">
         <div class="row align-items-center">
           <div class="col-md-6">
             <nav class="navbar navbar-expand-lg">
-              <div class="container-fluid justify-content-evenly fs-5 p-3">
-                <ul class="navbar-nav fs-2">
+              <div class="container-fluid justify-content-evenly fs-4 p-3">
+                <ul class="navbar-nav">
                   <li class="nav-item mx-5">
                     <a class="nav-link" href="/register.html">Register</a>
                   </li>
@@ -213,9 +213,9 @@
               </div>
             </nav>
           </div>
-          <div class="col-md-6 ">
-            <p class="fs-2 text-center">Get Social With US</p>
-            <div class="d-flex flex-row flex-wrap justify-content-center gap-5">
+          <div class="col-md-6 mt-3">
+            <p class="fs-4 text-center">Get Social With US</p>
+            <div class="d-flex flex-row justify-content-center gap-5">
               <i class="fa-brands fa-facebook fs-1 text-info"></i>
               <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
               <i class="fa-brands fa-twitter fs-1 text-info"></i>
