--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
             <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html">Register</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-secondary " href="about.html">About</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -112,8 +109,8 @@
             <div class="row h-100 justify-content-center align-items-center">
             <div class="col-lg-4 col-md-6 col-sm-8">
                 <h3 class="text-primary fs-2">Please log in</h3>
-                <form id="loginForm" method="post" class="needs-validation was-validated mb-3">
-                  <div class="form-floating mb-3">
+                <form id="loginForm" method="post" class="needs-validation mb-3">
+                  <div class="form-floating mb-3 fs-4">
                     <input
                       type="text"
                       class="form-control"
@@ -122,12 +119,12 @@
                       placeholder="E-mail"
                       required
                     />
-                    <label for="userEmail">Email</label>
+                    <label for="userEmail">Email...</label>
                     <div class="invalid-feedback text-danger">
                       Please enter a registered email address.
                     </div>
                   </div>
-                  <div class="form-floating">
+                  <div class="form-floating fs-4">
                     <input
                       type="password"
                       class="form-control"
@@ -147,7 +144,7 @@
                     <button
                       id="loginButton"
                       type="submit"
-                      class="btn btn-primary btn-lg border border-info border-3 text-white btn-lg mt-3"
+                      class="btn btn-primary btn-lg border border-secondary border-3 text-white btn-lg mt-3"
                     >
                       Login
                     </button>
