--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     <a href="/feed/auctions.html">
-                        <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="Image of a luxurious watch">
+                        <img src="/images/carouselImage1.jpg" class="d-block w-100" alt="Image of a luxurious watch">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
-                        <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
+                        <h2 class="text-white custom-text  bg-primary bg-opacity-50">Watches</h2>
                     </div>
                     </div>
                     <div class="carousel-item">
                     <a href="/feed/auctions.html">
-                        <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
+                        <img src="/images/carouselImage2.jpg" class="d-block w-100" alt="Image of a man in a Tuxedo">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
-                        <h2 class="text-white bg-primary bg-opacity-50">Men</h2>
+                        <h2 class="text-white custom-text  bg-primary bg-opacity-50">Men</h2>
                     </div>
                     </div>
                     <a href="/feed/auctions.html">
                     <div class="carousel-item">
-                    <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
+                    <img src="/images/carouselImage3.jpg" class="d-block w-100" alt="Image of a woman in a red dress">
                 </a>
                     <div class="carousel-caption d-none d-md-block">
-                        <h2 class="text-white bg-primary bg-opacity-50">Women</h2>
+                        <h2 class="text-white custom-text bg-primary bg-opacity-50">Women</h2>
                     </div>
                     </div>
                 </div>
